<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/spacing"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">


    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="@color/error"
        app:srcCompat="@drawable/ic_error"
        android:contentDescription="@string/cont_desc_error_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center_horizontal"
        android:text="@string/error" />

    <Button
        android:id="@+id/retry_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/reload" />
</LinearLayout>

